--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -128,5 +128,9 @@
     "value-list-comma-space-after": "always-single-line",
     "value-list-comma-space-before": "never",
     "value-list-max-empty-lines": 0
-  }
+  },
+  "ignoreFiles": [
+    "./src/container/**/*.js",
+    "./src/components/**/*.js"
+  ]
 }
