--- a/package.json
+++ b/package.json
@@ -17,22 +17,24 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^1.0.0",
-    "css-loader": "^1.0.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "express": "^4.16.4",
-    "file-loader": "^2.0.0",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.10.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "stylelint": "^13.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "webpack-cli": "^3.1.2",
@@ -41,7 +43,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "compression-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^3.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "webpack": "^4.6.0"
